--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,5 +4,5 @@ spring:
   cloud:
     config:
       enabled: true
-      label: master
-      uri: http://localhost:8091
+      label: main
+      uri: http://localhost:8888
