--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.nttdata.bootcamp</groupId>
 	<artifactId>ms-customer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>customer</name>
 	<description>Customer Microservice</description>
 	<properties>
